# mkdocs-terok

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  REUSE.toml  SECURITY.md  mkdocs.yml  properdocs.yml  pyproject.toml  tach.toml
.github/: dependabot.yml  requirements-ci.txt
.github/workflows/: ci.yml  docs-build.yml  docs.yml  inventory.yml  publish-inventory.yml  publish-versioned-docs.yml  release.yml
docs/: gen_ci_map.py  gen_config_reference.py  gen_quality_report.py  gen_ref_pages.py  gen_test_map.py  index.md  versioned-docs.md
scripts/: check-readme-version.py
src/mkdocs_terok/: __init__.py  ci_map.py  code_metrics.py  config_reference.py  inventory.py  module_map.py  plugin.py  quality_report.py  ref_pages.py  test_map.py  versions.py
src/mkdocs_terok/_assets/: extra.css  mermaid_zoom.js
tests/: test_ci_map.py  test_code_metrics.py  test_config_reference.py  test_init.py  test_inventory.py  test_module_map.py  test_plugin.py  test_quality_report.py  test_ref_pages.py  test_test_map.py  test_versions.py
