[build-system]
requires = ["poetry-core>=1.9.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "mkdocs-terok"
version = "0.2.1"
description = "Shared MkDocs documentation generators for terok projects"
readme = "README.md"
license = "0BSD"
authors = ["terok maintainers"]
keywords = ["mkdocs", "documentation", "quality-report", "ci-map"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Framework :: MkDocs",
  "Topic :: Documentation",
]

packages = [
  { include = "mkdocs_terok", from = "src" },
]

include = [
  { path = "src/mkdocs_terok/_assets/*.css" },
  { path = "src/mkdocs_terok/_assets/*.js" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
PyYAML = ">=6.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.8"
docstr-coverage = "^2.3.2"
vulture = ">=2.12"
reuse = "^6.2.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"
pydantic = ">=2.6"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6"
mkdocs-material = ">=9.5"
mkdocs-gen-files = ">=0.5"
mkdocs-literate-nav = ">=0.6"
mkdocstrings = {version = ">=0.26", extras = ["python"]}
pydantic = ">=2.6"
complexipy = ">=5.0"
tach = ">=0.34"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "docs"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "SIM",    # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B904",   # raise from in except
  "SIM102", # nested if statements
  "SIM105", # contextlib.suppress vs try/except/pass
  "SIM108", # use ternary operator
  "SIM117", # nested with statements
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
"docs/**" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["mkdocs_terok"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.coverage.run]
source = ["mkdocs_terok"]
relative_files = true

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)$"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
folders = [{path = "src"}]
