[build-system]
requires = ["poetry-core>=1.9.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "mkdocs-terok"
version = "0.5.7a4"
description = "Shared ProperDocs documentation generators for terok projects"
readme = "README.md"
license = "0BSD"
authors = ["Jiri Vyskocil <jiri@vyskocil.com>"]
keywords = ["properdocs", "mkdocs", "documentation", "quality-report", "ci-map"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: MkDocs",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Typing :: Typed",
]

packages = [
  { include = "mkdocs_terok", from = "src" },
]

include = [
  { path = "src/mkdocs_terok/_assets/*.css" },
  { path = "src/mkdocs_terok/_assets/*.js" },
]
maintainers = ["Jiri Vyskocil <jiri@vyskocil.com>"]
homepage = "https://terok.ai/"
repository = "https://github.com/terok-ai/mkdocs-terok"
documentation = "https://terok-ai.github.io/mkdocs-terok/"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
PyYAML = ">=6.0"
properdocs = ">=1.6.7"

[tool.poetry.plugins."mkdocs.plugins"]
terok = "mkdocs_terok.plugin:TerokPlugin"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.8"
docstr-coverage = "^2.3.2"
vulture = ">=2.12"
reuse = "^6.2.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"
pydantic = ">=2.6"


[tool.poetry.urls]
Issues = "https://github.com/terok-ai/mkdocs-terok/issues"
Changelog = "https://github.com/terok-ai/mkdocs-terok/releases"
Security = "https://github.com/terok-ai/mkdocs-terok/security/policy"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = ">=9.7.6"
mkdocs-gen-files = ">=0.5"
mkdocs-literate-nav = ">=0.6"
mkdocstrings = {version = ">=0.26", extras = ["python"]}
pydantic = ">=2.6"
complexipy = ">=5.0"
tach = ">=0.34"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "docs"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "SIM",    # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B904",   # raise from in except
  "SIM102", # nested if statements
  "SIM105", # contextlib.suppress vs try/except/pass
  "SIM108", # use ternary operator
  "SIM117", # nested with statements
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
"docs/**" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["mkdocs_terok"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.coverage.run]
source = ["mkdocs_terok"]
relative_files = true

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)(?:(?P<stage>a)(?P<revision>\\d+))?$"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
folders = [{path = "src"}]
