[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.5"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-terok"
description = "Shared ProperDocs documentation generators for terok projects"
readme = "README.md"
license = "0BSD"
authors = [
    {name = "Jiri Vyskocil", email = "jiri@vyskocil.com"},
]
maintainers = [
    {name = "Jiri Vyskocil", email = "jiri@vyskocil.com"},
]
keywords = ["properdocs", "mkdocs", "documentation", "code-metrics", "ci-map"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: MkDocs",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Typing :: Typed",
]
requires-python = ">=3.12,<4.0"
dynamic = ["version"]
# Dependency pins follow the policy in AGENTS.md ("Dependency Pinning &
# pyproject.toml Hygiene").  Keep the dependency list comment-free.
dependencies = [
    "PyYAML~=6.0",
    "properdocs~=1.6.7",
    "squarify==0.4.4",
]

[project.urls]
Homepage = "https://terok-ai.github.io/mkdocs-terok/"
Repository = "https://github.com/terok-ai/mkdocs-terok"
Documentation = "https://terok-ai.github.io/mkdocs-terok/"
Issues = "https://github.com/terok-ai/mkdocs-terok/issues"
Changelog = "https://github.com/terok-ai/mkdocs-terok/blob/master/CHANGELOG.md"
Security = "https://github.com/terok-ai/mkdocs-terok/security/policy"

[project.entry-points."mkdocs.plugins"]
terok = "mkdocs_terok.plugin:TerokPlugin"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "docstr-coverage>=2.3.2,<3",
    "vulture>=2.12",
    "reuse>=6.2.0,<7",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pydantic>=2.6",
    "tach>=0.34",
]
docs = [
    "mkdocs-material>=9.7.6",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocstrings[python]>=0.26",
    "pydantic>=2.6",
    "complexipy>=5.0",
    "tach>=0.34",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.8.0a2"

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocs_terok"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "docs"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "SIM",    # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B904",   # raise from in except
  "SIM102", # nested if statements
  "SIM105", # contextlib.suppress vs try/except/pass
  "SIM108", # use ternary operator
  "SIM117", # nested with statements
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
"docs/**" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["mkdocs_terok"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.coverage.run]
source = ["mkdocs_terok"]
relative_files = true

[tool.coverage.xml]
output = "reports/coverage.xml"
